app/static/styles/womens_activism.css
/* ... */
#flash-messages .alert {
    margin: 20px auto;
    width: 90%;
    max-width: 600px;
}

/* Give Section */

#give-jumbotron {
    background-color: #f2f2f2;
    min-height: 380px;
    text-align: center;
    color: #34294f;
    height: 100%;
    width: 100%;
    display: table;
    margin: 0;
}

#give-content {
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    padding-top: 40px;
    padding-bottom: 40px;
}

#give-jumbotron h1 {
    padding: 0 20px;
    font-size: 50px;
}

@media (min-width: 768px) {
    #give-jumbotron {
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 0;
        margin-bottom: 0;
    }
}

@media (min-width: 1170px) {
    #give-jumbotron h1 {
        padding: 0 200px;
    }
}

#home-give-btn {
    background: none;
    font-size: 30px;
    color: #59315f;
    border-radius: 0;
    border-width: 2px;
    margin-top: 50px;
    border-color: #59315f;
    max-width: 400px;
    width: 80%;
    padding: 15px 0;
    transition: background 0.2s ease;
}

#home-give-btn:hover {
    background: #59315f;
    color: #ffffff;
}

/* BW Suffrage Section */

#bws-jumbotron {
    background-color: #59315f;
    text-align: center;
    color: #ffffff;
    height: 100%;
    width: 100%;
}

#bws-content {
    height: 100%;
    vertical-align: middle;
    margin: 80px 0;
    text-align: left;
}

#bws-image-mask {
    width: 250px;
    height: 250px;
    background-size: cover;
    background-position: center;
    border-radius: 50%;
    margin: 0 auto;
}

#bws-h1 {
    font-size: 35px;
    margin-top: 48px;
}

#bws-quote {
    font-size: 42px;
    font-weight: lighter;
    font-style: italic;
}

@media (max-width: 1024px) {
    #bws-h1, #bws-content {
        text-align: left;
    }

    #bws-h1 {
        margin-top: 16px;
    }
}

@media (max-width: 991px) {
    #bws-h1, #bws-content {
        text-align: center;
    }

    #bws-h1 {
        margin-top: 50px;
    }
}

@media (min-width: 1024px) {
    #bws-quote {
        max-width: 600px;
    }
}

#home-bws-btn {
    background: none;
    font-size: 30px;
    color: #59315f;
    border-radius: 0;
    border-width: 2px;
    margin-top: 50px;
    border-color: #59315f;
    max-width: 400px;
    width: 80%;
    padding: 15px 0;
}

/* Twitter Feed Section */

#twitter-section {
    text-align: center;
    background-color: #f0eee9;
    color: #0c0b41;
    padding-top: 60px;
    padding-bottom: 60px;
}
#twitter-section a {
    color: #59315f;
    font-weight: 600;
}
#tweetsRow {
    margin: 60px auto 0 auto;
    max-width: 1170px;
    font-size: 22px;
}
#tweetsRow .col-md-4 {
    padding: 0 30px 35px 30px;
    overflow-wrap: break-word;
}
#home-view-tweets-btn {
    background: none;
    font-size: 20px;
    color: #59315f;
    border-radius: 0;
    border-width: 2px;
    margin-top: 40px;
    border-color: #59315f;
    padding: 12px 40px;
    transition: background 0.2s ease;
}
#home-view-tweets-btn:hover {
    background: #59315f;
    color: #ffffff;
}
.timeago {
    color: #6c6c6c !important;
    font-weight: normal !important;
    font-size: 18px !important;
}
.timePosted {
    margin-top: 20px;
}

/* Then & Now Section */

#then-now-jumbotron {
    background-color: #202427;
    min-height: 380px;
    text-align: center;
    color: #ffffff;
    height: 100%;
    width: 100%;
    display: table;
    margin: 0;
}

#then-now-content {
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    padding: 70px 0;
}

#then-now-content .container {
    margin-top: 60px;
    margin-bottom: 60px;
}

.then-now-sub-row {
    width: 99%;
    margin: 0 auto;
}

#then-now-jumbotron h1 {
    padding: 0 20px;
    font-size: 50px;
}

@media (min-width: 768px) {
    #then-now-jumbotron {
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 0;
        margin-bottom: 0;
    }
}

@media (min-width: 1170px) {
    #then-now-jumbotron h1 {
        padding: 0 200px;
    }
}

#home-then-now-btn {
    background: none;
    font-size: 30px;
    color: #ffffff;
    border-radius: 0;
    border-width: 2px;
    border-color: #ffffff;
    max-width: 400px;
    width: 80%;
    padding: 15px 0;
    transition: background 0.2s ease;
}

#home-then-now-btn:hover {
    background: #ffffff;
    color: #202427;
}

.then-now-img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    background-size: cover;
    background-position: center;
}

.then-now-text {
    text-align: left;
}

.then-now-name {
    margin-bottom: 3px;
}

.then-now-year {
    font-style: italic;
}

.then-now-bio {
    margin-top: 6px;
    line-height: 24px;
    font-size: 13px !important;
    font-weight: normal !important;
}

@media (min-width: 992px) and (max-width: 1200px) {
    .then-now-img {
        width: 125px;
        height: 125px;
    }
}

@media (min-width: 992px) {
    #left-col-6 {
        border-right: 1px solid #ffffff;
    }
}

@media (max-width: 991px) {
    .then-now-img {
        margin-left: auto;
        margin-right: auto;
    }

    .then-now-text {
        text-align: center;
    }

    #left-col-6 {
        margin-bottom: 50px;
    }

    .then-now-text {
        padding-top: 10px;
    }
}

/* Project Info */

#project-info {
    background-color: #ffffff;
    min-height: 150px;
    text-align: center;
    color: #34294f;
    height: 100%;
    width: 100%;
    display: flex;
    margin-bottom: 0;
    justify-content: center;
    align-items: center;
}

@media (min-width: 768px) {
    #project-info {
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 0;
        margin-bottom: 0;
    }
}

#project-info-content {
    height: 100%;
}

#project-info h1 {
    font-weight: 300;
    font-size: 26px;
    padding: 0 20px;
    margin: 0;
    line-height: 36px
}

.records-link {
    color: #59315f;
    text-decoration: underline;
    font-weight: normal;
    transition: color 0.2s ease;
}

.records-link:hover {
    color: #000000;
}
/* ... */

